scripts/kind/kfp_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: kubeflow
    namespace: kubeflow
spec:
    ingressClassName: nginx
    rules:
        - http:
              paths:
                  - path: "/"
                    pathType: Prefix
                    backend:
                        service:
                            name: ml-pipeline-ui
                            port:
                                name: http
